{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 215,
  "lineage": "d033edf5-f712-dce0-a2eb-eb71973b8a35",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "m1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkInterfaces/vm1-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-1E-52-32-FC-2E",
            "name": "vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "a1",
            "virtual_machine_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Compute/virtualMachines/vm1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vm1-nic",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "win_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "w1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkInterfaces/winvm1-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet2"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "7C-ED-8D-A0-1F-F7",
            "name": "winvm1-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "a1",
            "virtual_machine_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Compute/virtualMachines/winvm1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "winvm1-nic",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "v1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v1",
            "location": "centralindia",
            "name": "nsg-v1",
            "resource_group_name": "a1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowSSH",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowBastionInbound",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-HTTP-80",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-v1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "v2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v2",
            "location": "centralindia",
            "name": "nsg-v2",
            "resource_group_name": "a1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "AllowBastionInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowssh",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-v2",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_bastion_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "v1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v1/securityRules/AllowBastionInbound",
            "name": "AllowBastionInbound",
            "network_security_group_name": "nsg-v1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "a1",
            "source_address_prefix": "10.0.3.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowBastionInbound",
            "network_security_group_name": "nsg-v1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_network_security_group.example2",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "v2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "3389"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v2/securityRules/AllowBastionInbound",
            "name": "AllowBastionInbound",
            "network_security_group_name": "nsg-v2",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "a1",
            "source_address_prefix": "10.0.3.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowBastionInbound",
            "network_security_group_name": "nsg-v2",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_network_security_group.example2",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_vnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "v1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v1/securityRules/AllowVnetInbound",
            "name": "AllowVnetInbound",
            "network_security_group_name": "nsg-v1",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "a1",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowVnetInbound",
            "network_security_group_name": "nsg-v1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_network_security_group.example2",
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "v2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v2/securityRules/AllowVnetInbound",
            "name": "AllowVnetInbound",
            "network_security_group_name": "nsg-v2",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "a1",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AllowVnetInbound",
            "network_security_group_name": "nsg-v2",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_network_security_group.example2",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "p1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/publicIPAddresses/pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.219.128.4",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip1",
            "resource_group_name": "a1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "pip1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "bastion_subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "a1",
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AzureBastionSubnet",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "s1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "a1",
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "s2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "a1",
            "virtual_network_name": "vnet2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "subnet2",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8",
            "virtual_network_name": "vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "s1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v1",
            "subnet_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.example2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "s2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet2",
            "network_security_group_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v2",
            "subnet_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.example2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "v1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c14fd0e9-dfe5-4f73-93be-ae96ebe418aa",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "centralindia",
            "name": "vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "a1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
                "name": "subnet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v1"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "v2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "357abf26-cdee-484d-b83a-941def513fb8",
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2",
            "location": "centralindia",
            "name": "vnet2",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "a1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet2",
                "name": "subnet2",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/networkSecurityGroups/nsg-v2"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet2",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1/virtualNetworkPeerings/peer1to2",
            "name": "peer1to2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2",
            "resource_group_name": "a1",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "peer1to2",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet2/virtualNetworkPeerings/peer2to1",
            "name": "peer2to1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/ea653370-1326-4c22-9cab-7da230c00dc8/resourceGroups/a1/providers/Microsoft.Network/virtualNetworks/vnet1",
            "resource_group_name": "a1",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "peer2to1",
            "resource_group_name": "a1",
            "subscription_id": "ea653370-1326-4c22-9cab-7da230c00dc8",
            "virtual_network_name": "vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}